common.scss update

--- a/styles/scss/privacy-policy.scss
+++ b/styles/scss/privacy-policy.scss
@@ -1,5 +1,6 @@
 @import "common/fonts";
 @import "common/variables";
+@import "common/common";
 @import "common/mixins";
 @import "components/privacy-header";
 @import "components/privacy-section";
