--- a/styles/css/privacy.css
+++ b/styles/css/privacy.css
@@ -4,11 +4,11 @@
   font-weight: 400;
   font-style: normal;
 }
-header {
+body {
   font-family: Poppins;
-  font-size: 16px;
 }
-header .container {
+
+.container {
   font-family: Poppins;
   max-width: 1100px;
   width: 100%;
@@ -16,6 +16,21 @@ header .container {
   display: flex;
   padding-top: 110px;
   padding-bottom: 100px;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  font-size: 70px;
+}
+
+header {
+  font-family: Poppins;
+  font-size: 16px;
+}
+header .container {
   padding-top: 20px;
   flex-direction: column;
 }
@@ -53,13 +68,6 @@ header .container .navigation .right_top input {
 
 .information .container {
   font-family: Poppins;
-  max-width: 1100px;
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  padding-top: 110px;
-  padding-bottom: 100px;
-  font-family: Poppins;
   font-size: 16px;
   flex-direction: column;
   gap: 80px;
@@ -89,15 +97,6 @@ header .container .navigation .right_top input {
 
 footer {
   background-color: #343434;
-}
-footer .container {
-  font-family: Poppins;
-  max-width: 1100px;
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  padding-top: 110px;
-  padding-bottom: 100px;
 }
 footer .container .footer_left {
   width: 50%;
