--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -4,8 +4,29 @@
   font-weight: 400;
   font-style: normal;
 }
-.top {
+body {
   font-family: Poppins;
+}
+
+.container {
+  font-family: Poppins;
+  max-width: 1100px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  padding-top: 110px;
+  padding-bottom: 100px;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  font-size: 70px;
+}
+
+.top {
   background-image: url(../../assets/pictures/ground.png);
   background-size: cover;
   background-position: center;
@@ -14,13 +35,6 @@
   font-size: 16px;
 }
 .top .container {
-  font-family: Poppins;
-  max-width: 1100px;
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  padding-top: 110px;
-  padding-bottom: 100px;
   padding-top: 20px;
   flex-direction: column;
 }
@@ -36,14 +50,12 @@
   padding-top: 5px;
 }
 .top .container .top__navigation .right_top .home a {
-  text-decoration: none;
   color: white;
 }
 .top .container .top__navigation .right_top .terms {
   padding-top: 5px;
 }
 .top .container .top__navigation .right_top .terms a {
-  text-decoration: none;
   color: white;
 }
 .top .container .top__navigation .right_top input {
@@ -64,9 +76,6 @@
   padding-bottom: 100px;
   color: white;
   width: 100%;
-}
-.top .top__center .top__center__info h1 {
-  font-size: 70px;
 }
 .top .top__center .top__center__rest1 {
   padding-bottom: 40px;
@@ -93,17 +102,9 @@
 }
 .top .top__center .top__center__accept .accept__agree a {
   color: #2EACF3;
-  text-decoration: none;
 }
 
 .section-first .container {
-  font-family: Poppins;
-  max-width: 1100px;
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  padding-top: 110px;
-  padding-bottom: 100px;
   gap: 50px;
 }
 .section-first .container .section-first__left-part {
@@ -176,13 +177,6 @@
   background-color: #F4F4FA;
 }
 .section-second .container {
-  font-family: Poppins;
-  max-width: 1100px;
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  padding-top: 110px;
-  padding-bottom: 100px;
   gap: 50px;
   flex-wrap: wrap;
 }
@@ -317,15 +311,6 @@
 
 footer {
   background-color: #343434;
-}
-footer .container {
-  font-family: Poppins;
-  max-width: 1100px;
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  padding-top: 110px;
-  padding-bottom: 100px;
 }
 footer .container .footer_left {
   width: 50%;
