--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -1,5 +1,6 @@
 @import "common/fonts";
 @import "common/variables";
+@import "common/common";
 @import "common/mixins";
 @import "components/header";
 @import "components/index-section-first";
